# sample_mcp_server_skills

./: .coverage  .dockerignore  .gitignore  Dockerfile  README.md  build.sh  pyproject.toml  terraform.sh
src/: main.py
src/core/: config.py
src/mcp/: document_tools.py  skill_tools.py
src/models/: skill.py
src/repositories/: document_repository.py  skill_repository.py
src/services/: document_service.py  skill_service.py
terraform/: main.tf  sa.tf  storage.tf
tests/: test_mcp_tools.py  test_repositories.py  test_services.py  verify_skills.py
